# Pydantic

./: 01assign.py  fields.py  fields_assign.py  main.py  nested.py  nested_assign.py  pyproject.toml  serial.py  val_assign.py  validator.py
